--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="container">
-            <h1>SomaUm</h1>
+            <h1>SomAndo</h1>
         </div>
 
         <div class="container">
