--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="default.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="animations.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./css/default.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./css/styles.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./css/animations.css" media="screen" />
     <link rel="icon" href="./media/cookie.png" />
     <title>SomaAndo</title>
 
@@ -65,7 +65,9 @@
             <div id="questionContainer"></div>
         </div>
     </main>
-    <script src="scripts.js"></script>
+    <script src="./scripts/scripts.js"></script>
+    <script src="./scripts/clock.js"></script>
+    <script src="./scripts/darkmode.js"></script>
 </body>
 
 </html>
