--- a/login.html
+++ b/login.html
@@ -9,43 +9,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/default.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="./css/animations.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./css/login.css" media="screen" />
+
     <link rel="icon" href="./media/cookie.png" />
     <title>SomaAndo</title>
 
 </head>
 
-<body>
+<body class="dark-mode">
     <main>
-        <div>
-            <a href="./index.html">
-                <h1 class="espalha-h pointer">SomAndo</h1>
-            </a>
-        </div>
-        
         <div class="">
             <div id="form">
-                <div class="logo"></div>
+                <div id="logo" class="container">
+                    <a href="./index.html">
+                        <h1 class="espalha-h pointer">SomAndo</h1>
+                    </a>
+                </div>
                 <div class="form-item">
                     <p class="formLabel">Email</p>
-                    <input type="email" name="email" id="email" class="form-style" autocomplete="off" />
+                    <input type="email" name="email" id="email" class="form-style" autocomplete="off"
+                        placeholder="Email" />
                 </div>
                 <div class="form-item">
                     <p class="formLabel">Password</p>
-                    <input type="password" name="password" id="password" class="form-style" />
-                    <p><a href="#"><small>Forgot Password?</small></a></p>
+                    <input type="password" name="password" id="password" class="form-style" placeholder="Password" />
                 </div>
                 <div class="form-item">
-                    <p class="pull-left"><a href="#"><small>Register</small></a></p>
-                    <input type="submit" class="login pull-right" value="Log In">
+                    <p><a href="#">
+                            <h6>Forgot Password?<h6>
+                        </a></p>
+                    <p class=""><a href="#">
+                            <h6>Register<h6>
+                        </a></p>
+                </div>
+                <div>
+                    <a href="#" class="submit button">
+                        <p>Login</p>
+                    </a>
+
                 </div>
             </div>
         </div>
     </main>
     <script src="./scripts/scripts.js"></script>
-    <script src="./scripts/clock.js"></script>
     <script src="./scripts/darkmode.js"></script>
+    <script src="./scripts/login.js"></script>
 
 </body>
 
