--- a/login.html
+++ b/login.html
@@ -22,9 +22,12 @@
         <div class="">
             <div id="form">
                 <div id="logo" class="container">
-                    <a href="./index.html">
+                    <a href="./login.html">
                         <h1 class="espalha-h pointer">SomAndo</h1>
                     </a>
+                </div>
+                <div id="daniel" class="center">
+                    <img id="eyes" src="./media/daniel-open.png" alt="desenho de ovo sorrindo">
                 </div>
                 <div class="form-item">
                     <p class="formLabel">Email</p>
