--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 <body class="dark-mode">
     <header>
         <div class="container">
-            <a href="./store.html"><img class="icon shake" href="./store.html"
-                    src="./media/cookie.png"></a>
+            <a href="./store.html"><img class="icon shake" href="./store.html" src="./media/cookie.png"></a>
         </div>
         <div>
             <a href="./index.html">
