--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <html lang="pt-BR">
 
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Share Tech Mono' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,9 +63,11 @@
             <div id="questionContainer"></div>
         </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="./scripts/scripts.js"></script>
     <script src="./scripts/clock.js"></script>
     <script src="./scripts/darkmode.js"></script>
+    <script src="./scripts/supabase.js"></script>
 </body>
 
 </html>
