--- a/login.html
+++ b/login.html
@@ -4,7 +4,6 @@
 <html lang="pt-BR">
 
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Share Tech Mono' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,9 +29,9 @@
                     <img id="eyes" src="./media/daniel-open.png" alt="desenho de ovo sorrindo">
                 </div>
                 <div class="form-item">
-                    <p class="formLabel">Email</p>
+                    <p class="formLabel">Email/Username</p>
                     <input type="email" name="email" id="email" class="form-style" autocomplete="off"
-                        placeholder="Email" />
+                        placeholder="Email/Username" />
                 </div>
                 <div class="form-item">
                     <p class="formLabel">Password</p>
@@ -55,9 +54,9 @@
             </div>
         </div>
     </main>
-    <script src="./scripts/scripts.js"></script>
-    <script src="./scripts/darkmode.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="./scripts/login.js"></script>
+    <script src="./scripts/supabase.js"></script>
 
 </body>
 
