--- a/home.html
+++ b/home.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<html>
-<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -13,6 +11,8 @@
     <link rel="icon" href="./media/cookie.png" />
     <title>SomaAndo</title>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+
 </head>
 
 <body class="dark-mode">
@@ -21,7 +21,7 @@
             <a href="./store.html"><img class="icon shake" href="./store.html" src="./media/cookie.png"></a>
         </div>
         <div>
-            <a href="./index.html">
+            <a href="./home.html">
                 <h1 class="espalha-h pointer">SomAndo</h1>
             </a>
         </div>
@@ -63,11 +63,9 @@
             <div id="questionContainer"></div>
         </div>
     </main>
-    <script src="https://apis.google.com/js/api.js"></script>
     <script src="./scripts/scripts.js"></script>
     <script src="./scripts/clock.js"></script>
     <script src="./scripts/darkmode.js"></script>
-    <script src="./scripts/googlesheets.js"></script>
 </body>
 
 </html>
